# binpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.c  binpack-search.c  binpack-solution.c  binpack.c  binpack.h
tests/: CMakeLists.txt  readfile.c  search.c  solution.c
